# autocreate_table_bot

./: main.py  pyproject.toml  requirements.txt
